# agent-dash

./: .gitignore  .wtp.yml  CLAUDE.md  Cargo.toml  biome.jsonc  package.json  tsconfig.json  turbo.jsonc
.claude/: settings.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
apps/cli/: package.json
apps/cli-rs/: Cargo.toml
apps/cli-rs/src/: app.rs  config.rs  main.rs  session.rs  terminal.rs  tmux.rs
apps/cli-rs/src/ui/: confirm_dialog.rs  help_overlay.rs  keybinds.rs  mod.rs  pane_preview.rs  session_list.rs
apps/cli/entries/: cli.ts
apps/cli/notes/: startup-bench-2025-02-19.md
apps/cli/src/domain/: session.ts
apps/cli/src/services/: config.ts  state.ts  tmux-client.ts
apps/cli/src/ui/: ansi-parser.ts  app.ts  confirm-dialog.ts  constants.ts  help-overlay.ts  keybinds.ts  pane-preview.ts  session-groups.ts  session-list.ts
apps/cli/src/utils/: terminal.ts
apps/docs/: CLAUDE.md  package.json  tsconfig.json
apps/docs/content/docs/: agents.mdx  configuration.mdx  (+5 more)
apps/docs/notes/: design-system.md
apps/tui/: package.json  tsconfig.json
apps/tui/entries/: cli.ts
apps/tui/src/: main.ts
docs/: agent-detection.md  enrichment.md
plugins/claude/: README.md
plugins/claude/hooks/: hooks.json
plugins/opencode/: README.md  plugin.ts
src/: app.rs  cache.rs  config.rs  copy_mode.rs  enrichment.rs  filter_query.rs  hook_write.rs  main.rs  pipe_pane.rs  resize_pane.rs  selection.rs  session.rs  state.rs  terminal.rs  tmux.rs
src/ui/: confirm_dialog.rs  help_overlay.rs  keybinds.rs  mod.rs  pane_preview.rs  session_list.rs
(+25 files in other folders)
