[package]
name = "agent-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"
ansi-to-tui = "8"
arboard = "3"
libc = "0.2"
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
