[package]
name = "agent-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"
ansi-to-tui = "7"
arboard = "3"
